changed 'for many instances we do not find an improvement' to 'for one instance' as there is only one such graph

--- a/src/report2/report2.tex
+++ b/src/report2/report2.tex
@@ -226,7 +226,7 @@ is valid.
 If a local optimum is reached it is found in less than 10 iterations
 in most cases.  As you can see in table ~\ref{tab:results} there are
 only a few exceptions.  The results with iterations=$-1$ didn't reach
-a local optimum and ran into our timeout condition. For many graphs,
+a local optimum and ran into our timeout condition. For one instance,
 we do not find an improvement. So with respect to our neighborhood, we
 seem to be in a local optimum.
 
