--- a/src/report2/resultsTab.tex
+++ b/src/report2/resultsTab.tex
@@ -1,13 +1,15 @@
+% latex table generated in R 3.0.2 by xtable 1.7-4 package
+% Sat Nov  7 23:01:14 2015
 \begin{tabular}{lccccccccc}
   \toprule  & \begin{minipage}[c]{1.4cm}\centering 1-Node \\ (first)\end{minipage} & \begin{minipage}[c]{1.4cm}\centering 1-Node \\ (best)\end{minipage} & \begin{minipage}[c]{1.4cm}\centering 1-Node \\ (random)\end{minipage} & \begin{minipage}[c]{1.4cm}\centering 1-Edge \\ (first)\end{minipage} & \begin{minipage}[c]{1.4cm}\centering 1-Edge \\ (best)\end{minipage} & \begin{minipage}[c]{1.4cm}\centering 1-Edge \\ (random)\end{minipage} & \begin{minipage}[c]{1.4cm}\centering 1-N-E \\ (first)\end{minipage} & \begin{minipage}[c]{1.4cm}\centering 1-N-E \\ (best)\end{minipage} & \begin{minipage}[c]{1.4cm}\centering 1-N-E \\ (random)\end{minipage} \\ 
-  \midrule automatic-1.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 21\\0 / 0.02 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 21\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 21\\0 / 0.01 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 21\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 21\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 21\\0 / 0.01 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 21\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 21\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 21\\0 / 0.00 \end{minipage} \\ 
-    \midrule automatic-2.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 30\\4 / 0.07 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 48\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 48\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 48\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 48\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 48\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 48\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 48\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 48\\0 / 0.01 \end{minipage} \\ 
-    \midrule automatic-3.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 101\\6 / 0.30 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 131\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 119\\3 / 0.05 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 115\\1 / 0.02 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 131\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 131\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 131\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 131\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 80\\16 / 0.14 \end{minipage} \\ 
-    \midrule automatic-4.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 7\\22 / 0.81 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 143\\3 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 141\\2 / 0.01 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 124\\6 / 0.03 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 165\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 128\\8 / 0.01 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 169\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 169\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 128\\8 / 0.02 \end{minipage} \\ 
-    \midrule automatic-5.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 36\\7 / 0.35 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 74\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 67\\2 / 0.02 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 72\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 73\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 74\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 74\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 74\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 51\\13 / 0.04 \end{minipage} \\ 
-    \midrule automatic-6.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,151,784\\-1 / 316.34 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,153,059\\0 / 15.69 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,025,236\\-1 / 316.52 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,153,059\\0 / 257.34 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,153,059\\0 / 20.68 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,036,408\\-1 / 316.29 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,153,059\\0 / 16.52 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,152,675\\-1 / 338.98 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,151,720\\-1 / 317.04 \end{minipage} \\ 
-    \midrule automatic-7.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 138,729\\-1 / 301.17 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 141,314\\0 / 0.20 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 140,262\\16 / 20.81 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 141,307\\0 / 0.20 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 141,314\\0 / 0.67 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 139,435\\19 / 6.50 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 141,314\\0 / 0.19 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 141,314\\0 / 0.81 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 137,924\\127 / 118.47 \end{minipage} \\ 
-    \midrule automatic-8.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 571,516\\-1 / 304.24 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 573,754\\0 / 3.34 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 537,857\\-1 / 304.27 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 573,668\\3 / 44.36 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 573,754\\0 / 3.66 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 552,019\\-1 / 304.22 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 573,754\\0 / 3.30 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 573,754\\0 / 42.91 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 571,732\\-1 / 304.25 \end{minipage} \\ 
-    \midrule automatic-9.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,252,209\\-1 / 304.73 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,273,121\\0 / 3.79 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,211,265\\-1 / 304.73 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,273,071\\8 / 64.68 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,273,121\\0 / 10.34 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,244,554\\-1 / 304.66 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,273,121\\0 / 3.72 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,272,439\\3 / 58.45 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,271,380\\-1 / 304.70 \end{minipage} \\ 
-    \midrule automatic-10.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 56,831\\-1 / 302.44 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 56,936\\0 / 1.45 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 56,131\\-1 / 302.42 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 56,775\\31 / 33.81 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 56,936\\0 / 1.64 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 56,877\\1 / 1.46 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 56,936\\0 / 1.47 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 56,936\\0 / 6.69 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 55,844\\-1 / 302.39 \end{minipage} \\ 
+  \midrule automatic-1.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*21*}\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*21*}\\0 / 0.01 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*21*}\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*21*}\\0 / 0.01 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*21*}\\0 / 0.01 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*21*}\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*21*}\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*21*}\\0 / 0.01 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*21*}\\0 / 0.00 \end{minipage} \\ 
+    \midrule automatic-2.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 48\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*30*}\\4 / 0.05 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 48\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 48\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 48\\0 / 0.01 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 48\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 48\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 48\\0 / 0.01 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 48\\0 / 0.00 \end{minipage} \\ 
+    \midrule automatic-3.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 104\\0 / 0.02 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 94\\5 / 0.22 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 104\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 104\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*79*}\\8 / 0.10 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 104\\0 / 0.02 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 104\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 97\\2 / 0.06 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 104\\0 / 0.01 \end{minipage} \\ 
+    \midrule automatic-4.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 69\\36 / 0.16 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*12*}\\17 / 0.45 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 192\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 163\\6 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 155\\9 / 0.02 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 192\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 164\\9 / 0.02 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 169\\4 / 0.02 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 188\\0 / 0.01 \end{minipage} \\ 
+    \midrule automatic-5.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 75\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*32*}\\10 / 0.32 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 76\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 77\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 41\\15 / 0.04 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 77\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 77\\0 / 0.00 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 69\\1 / 0.02 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 77\\0 / 0.00 \end{minipage} \\ 
+    \midrule automatic-6.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,153,059\\0 / 224.99 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,151,784\\-1 / 308.61 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,153,059\\0 / 8.61 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,033,148\\-1 / 308.59 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,151,720\\-1 / 308.78 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,151,901\\-1 / 343.80 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,153,059\\0 / 7.94 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*5,965,084*}\\-1 / 308.62 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 6,153,059\\0 / 10.86 \end{minipage} \\ 
+    \midrule automatic-7.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 142,777\\32 / 3.27 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 140,291\\-1 / 301.14 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 143,570\\0 / 0.15 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 140,027\\60 / 11.99 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*137,629*}\\315 / 204.66 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 143,793\\11 / 2.91 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 143,905\\0 / 0.18 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 142,786\\19 / 18.80 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 143,905\\0 / 1.63 \end{minipage} \\ 
+    \midrule automatic-8.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 541,935\\3 / 39.74 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 537,728\\-1 / 302.71 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 541,969\\0 / 1.81 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 521,950\\-1 / 302.71 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 539,307\\-1 / 303.26 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 541,969\\0 / 54.97 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 541,969\\0 / 1.83 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*498,763*}\\-1 / 302.76 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 541,969\\0 / 7.15 \end{minipage} \\ 
+    \midrule automatic-9.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,268,407\\4 / 2.85 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,232,469\\-1 / 303.03 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,268,456\\0 / 2.18 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,231,026\\-1 / 303.04 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,265,579\\-1 / 303.03 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,265,936\\50 / 286.19 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,267,963\\0 / 2.19 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*1,186,295*}\\-1 / 303.04 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 1,268,005\\16 / 10.64 \end{minipage} \\ 
+    \midrule automatic-10.txt & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 56,021\\70 / 44.04 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 56,115\\-1 / 302.29 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 56,260\\0 / 1.47 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering \textbf{*53,952*}\\-1 / 302.27 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 54,848\\-1 / 302.27 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 56,260\\0 / 7.72 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 56,260\\0 / 1.34 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 55,235\\-1 / 302.33 \end{minipage} & \vspace{0.02cm} \begin{minipage}[c]{1.5cm} \centering 56,260\\0 / 5.21 \end{minipage} \\ 
    \bottomrule \end{tabular}
